feat: 크루 조회 기능 추가
- 필터링 및 정렬 기능을 포함한 크루 조회